# FreeDPB

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/accelerometer/: CMakeLists.txt
components/accelerometer/devices/: ADXL345.cpp  BMX055.cpp
components/accelerometer/devices/include/: ADXL345.h  ADXL345_def.h  (+2 more)
components/accelerometer/include/: accelerometer.hpp
components/dpb-dsp/: CMakeLists.txt  SignalProcessing.cpp
components/dpb-dsp/include/: SignalProcessing.hpp
components/lvgl/: lv_conf.h
components/motor-dshot/: CMakeLists.txt  motor.cpp
components/motor-dshot/include/: motor.hpp
components/rpm-tracker/: CMakeLists.txt  RPMTracker.cpp
components/rpm-tracker/include/: RPMTracker.hpp
doc/Page-project/: Idle.pdn
main/: CMakeLists.txt  DPBshared.cpp  DPBshared.hpp  common_def.h  main.cpp  main.h  tasks.cpp  tasks.hpp
main/FreeDPB/: DPB.cpp  DPB.hpp
main/GUI/: GUI.cpp  GUI.h  GUI_vars.h
main/GUI/fonts/: gui_font_med.c
main/GUI/images/: motor_icon.c  nerd_face_icon.c  weight_icon.c
main/sanity/: sanity_check.h
src/: CMakeLists.txt  main.cpp  main.h
src/GUI/: GUI.cpp  GUI.h  GUI_vars.h
src/GUI/images/: chart_change_icon.c  chart_ico.c  fft_ico.c  motor_icon.c  nerd_face_icon.c  prop.c  propeller_img_png.c  reset_icon.c  sensor_img.c  settings_icon.c  weight_icon.c
src/app/: application.cpp  application.cpp_old  application.h  application_def.h
src/common/: SignalProcessing.cpp  SignalProcessing.h  common_def.h  utils.h
src/motor/: motor.cpp  motor.h
src/sanity/: sanity_check.h
src/sensors/: accelerations.cpp  accelerations.h  accelerations_def.h  position.cpp  position.h  position_def.h
src/sensors/drivers/: ADXL345.cpp  ADXL345.h  ADXL345_def.h  BMX055.cpp  BMX055.h  BMX055_defs.h
src/shared/: common_def.h  shared_data.cpp  shared_data.h
src/tasks/: tasks.cpp  tasks.h  tasks_def.h
(+1 files in other folders)
